--- a/_posts/2024-04-10-lab-news.md
+++ b/_posts/2024-04-10-lab-news.md
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Updated News
+title: What's New
 #permalink: /lab-news/
 ---
 
@@ -14,7 +14,7 @@ We are thrilled to introduce the "Code and Coffee Evening Series," a set of info
 **Speaker:** P'Sprite (CPE_Y4)
 
 ![Poster for EP01](EP01_Poster.jpg)
-<img src="/_posts/EP01_Poster.jpg" width="100" />
+<img src="EP01_Poster.jpg" width="100" />
 
 ### EP02: PowerBI 101
 
@@ -22,7 +22,7 @@ We are thrilled to introduce the "Code and Coffee Evening Series," a set of info
 **Speaker:** P'GIl (CPE_Y4) and P'AumAim (CPE_Y4)
 
 ![Poster for EP02](EP02_Poster.jpg)
-<img src="/_posts/EP02_Poster.jpg" width="100" />
+<img src="EP02_Poster.jpg" width="100" />
 
 ### EP03: Virtual Assistant with Microsoft Azure
 
@@ -30,6 +30,6 @@ We are thrilled to introduce the "Code and Coffee Evening Series," a set of info
 **Speaker:** Punyapat (CPE_Y2)
 
 ![Poster for EP03](EP03_Poster.jpg)
-<img src="/_posts/EP03_Poster.jpg" width="100" />
+<img src="EP03_Poster.jpg" width="100" />
 
-# - **Photo Gallery:** [Link to photos from the event](URL_to_photo_gallery)
+**Photo Gallery:** [Link to photos from the event](URL_to_photo_gallery)
