--- a/_posts/2024-04-10-lab-news.md
+++ b/_posts/2024-04-10-lab-news.md
@@ -13,20 +13,20 @@ We are thrilled to introduce the "Code and Coffee Evening Series," a set of info
 **Date:** 21 Febuary 2024
 **Speaker:** P'Sprite (CPE_Y4)
 
-<img src="EP01_Poster.jpg" width="300" />
+<img src="{{ site.baseurl }}/public/EP01_Poster.jpg" alt="EP01_Poster" style="width:70%;">
 
 ### EP02: PowerBI 101
 
 **Date:** 19 March 2024
 **Speaker:** P'GIl (CPE_Y4) and P'AumAim (CPE_Y4)
 
-<img src="EP02_Poster.jpg" width="300" />
+<img src="{{ site.baseurl }}/public/EP02_Poster.jpg.jpg" alt="EP02_Poster.jpg" style="width:70%;">
 
 ### EP03: Virtual Assistant with Microsoft Azure
 
 **Date:** 27 March 2024
 **Speaker:** Punyapat (CPE_Y2)
 
-<img src="EP03_Poster.jpg" width="300" />
+<img src="{{ site.baseurl }}/public/EP03_Poster.jpg" alt="EP03_Poster.jpg" style="width:70%;">
 
 **Photo Gallery:** [Link to photos from the event](URL_to_photo_gallery)
