--- a/_posts/2024-04-10-lab-news.md
+++ b/_posts/2024-04-10-lab-news.md
@@ -20,7 +20,7 @@ We are thrilled to introduce the "Code and Coffee Evening Series," a set of info
 **Date:** 19 March 2024
 **Speaker:** P'GIl (CPE_Y4) and P'AumAim (CPE_Y4)
 
-<img src="{{ site.baseurl }}/public/EP02_Poster.jpg.jpg" alt="EP02_Poster.jpg" style="width:70%;">
+<img src="{{ site.baseurl }}/public/EP02_Poster.jpg" alt="EP02_Poster.jpg" style="width:70%;">
 
 ### EP03: Virtual Assistant with Microsoft Azure
 
